Clean up .browsehappy

--- a/css/jeet/reset.styl
+++ b/css/jeet/reset.styl
@@ -149,13 +149,10 @@ img, video, audio, embed, object, input, iframe
     padding 15px 0
     background #fff
     border-bottom 1px solid #ddd
-    //box-shadow inset 0 -1px 0 #fff
-    //text-shadow 0 1px 0 #fff
-    p, span
+    p
         center()
-        margin-top 0
-        margin-bottom 0
         text-align center
-        margin-bottom 0
+        &:last-of-type
+            margin-bottom 0
     a
         color blue
