Update typography margin-top mehs

--- a/css/jeet/typography.styl
+++ b/css/jeet/typography.styl
@@ -69,7 +69,7 @@ a
     color blue
     &:hover
         color darken(blue, 10%)
-h1
+h1, h2, h3, h4, h5, h6, p, ul, ol, dt, pre, code
     margin-top 0
 h1, h2, h3, h4, h5, h6, dt
     font-family headers
