Add align(); update resets

--- a/css/jeet/utilities.styl
+++ b/css/jeet/utilities.styl
@@ -1,6 +1,7 @@
 // Edit Mode
 edit()
     *
+        background #eee 
         background rgba(#000, 5%) url(../img/edit_mixin.png)
 
 // Horizontal Centering Block Elements
