--- a/css/jeet/reset.styl
+++ b/css/jeet/reset.styl
@@ -132,6 +132,7 @@ normalize()
 *, *:before, *:after, *::before, *::after
     *behavior url(js/vendor/boxsizing.htc)
     box-sizing border-box
+    -moz-box-sizing border-box
     margin 0
     padding 0
 html
