--- a/jeet/shame.styl
+++ b/jeet/shame.styl
@@ -1,16 +1,16 @@
-get_span(ratio = 1)
+-get_span(ratio = 1)
     return ratio * 100
-get_column(ratios = 1, g = gutter)
+-get_column(ratios = 1, g = gutter)
     ratios = reverse(ratios) unless parent_first is true
     w = 100
     for ratio in ratios
         g = g / w * 100
         w = 100 * ratio - g + ratio * g
     return w g
-get_layout_direction()
+-get_layout_direction()
     layout_direction == RTL ? result = right : result = left
     return result
-replace_nth(list, index, value)
+-replace_nth(list, index, value)
     result = ()
     index = length(list) + index if index < 0
     for i in (0..(length(list) - 1))
@@ -19,7 +19,7 @@ replace_nth(list, index, value)
         else
             append(result, list[i])
     return result
-reverse(list)
+-reverse(list)
     result = ()
     for item in list
         prepend(result, item)
