--- a/jeet/shame.styl
+++ b/jeet/shame.styl
@@ -1,7 +1,7 @@
 -get_span(ratio = 1)
     return ratio * 100
 -get_column(ratios = 1, g = gutter)
-    ratios = reverse(ratios) unless parent_first is true
+    ratios = -reverse(ratios) unless parent_first is true
     w = 100
     for ratio in ratios
         g = g / w * 100
