Convert all @extends to @extend

--- a/jeet/reset.styl
+++ b/jeet/reset.styl
@@ -138,7 +138,7 @@ html
     overflow-y: scroll
     overflow-x: hidden
 body
-    @extends $cf
+    @extend $cf
     width: 100%
 img, video, audio, embed, object, input, iframe
     max-width: 100%
