--- a/jeet/utilities.styl
+++ b/jeet/utilities.styl
@@ -6,7 +6,7 @@ edit()
 
 // Horizontal Centering Block Elements
 center(max_width = 1410px, pad = 15px)
-    @extends $cf
+    @extend $cf
     width: auto
     max-width: max_width
     float: none
