--- a/jeet/grid.styl
+++ b/jeet/grid.styl
@@ -12,7 +12,7 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0)
         else
             offset = -get_column(offset, column_widths[1])[0]
             margin_l = offset + column_widths[1]
-    @extends $cf
+    @extend $cf
     float: side
     display: inline
     clear: none
@@ -45,7 +45,7 @@ span(ratio = 1, offset = 0)
             margin_r = -get_span(offset)
         else
             margin_l = -get_span(offset)
-    @extends $cf
+    @extend $cf
     float: side
     display: inline
     clear: none
