Remove image from edit() mixin as Stylus lib ver of Jeet won't support

--- a/jeet/utilities.styl
+++ b/jeet/utilities.styl
@@ -1,9 +1,8 @@
 // Edit Mode
 edit()
     *
-        background #eee 
-        background rgba(#000, 5%) url(../img/edit_mixin.png)
         background: #eee 
+        background: rgba(#000, 5%)
 
 // Horizontal Centering Block Elements
 center(max_width = 1410px, pad = 15px)
