--- a/jeet/grid.styl
+++ b/jeet/grid.styl
@@ -1,17 +1,17 @@
 // Columns with Gutters
 column(ratios = 1, offset = 0, cycle = 0, uncycle = 0)
-    side = get_layout_direction()
-    widths = get_column(ratios)
+    side = -get_layout_direction()
+    column_widths = -get_column(ratios)
     margin_l = margin_last = 0
-    margin_r = widths[1]
+    margin_r = column_widths[1]
     unless offset == 0
         if offset < 0
             offset *= -1
-            offset = get_column(offset, widths[1])[0]
-            margin_r = margin_last = offset + widths[1] * 2
+            offset = -get_column(offset, column_widths[1])[0]
+            margin_r = margin_last = offset + column_widths[1] * 2
         else
-            offset = get_column(offset, widths[1])[0]
-            margin_l = offset + widths[1]
+            offset = -get_column(offset, column_widths[1])[0]
+            margin_l = offset + column_widths[1]
     @extends $cf
     float side
     display inline
@@ -36,15 +36,15 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0)
 
 // Columns without Gutters
 span(ratio = 1, offset = 0)
-    side = get_layout_direction()
-    width = get_span(ratio)
+    side = -get_layout_direction()
+    span_width = -get_span(ratio)
     margin_l = margin_r = 0
     unless offset == 0
         if offset < 0
             offset *= -1
-            margin_r = get_span(offset)
+            margin_r = -get_span(offset)
         else
-            margin_l = get_span(offset)
+            margin_l = -get_span(offset)
     @extends $cf
     float side
     display inline
@@ -58,14 +58,14 @@ span(ratio = 1, offset = 0)
 
 // Source Ordering
 shift(ratios = 0, col_or_span = column)
-    side = get_layout_direction()
+    side = -get_layout_direction()
     if side == right
-        ratios = replace_nth(ratios, 0, ratios[0] * -1)
+        ratios = -replace_nth(ratios, 0, ratios[0] * -1)
     if col_or_span == column or col_or_span == col or col_or_span == c
-        widths = get_column(ratios)
-        translate = widths[0] + widths[1]
+        column_widths = -get_column(ratios)
+        translate = column_widths[0] + column_widths[1]
     else
-        translate = get_span(ratios)
+        translate = -get_span(ratios)
     position relative
     left (translate)%
 unshift()
