--- a/jeet/reset.styl
+++ b/jeet/reset.styl
@@ -11,148 +11,148 @@ normalize() // v2.1.3
     nav,
     section,
     summary
-        display block
+        display: block
     audio,
     canvas,
     video
-        display inline-block
+        display: inline-block
     audio:not([controls])
-        display none
-        height 0
+        display: none
+        height: 0
     [hidden],
     template
-        display none
+        display: none
     html
-        font-family sans-serif
-        text-size-adjust 100%
+        font-family: sans-serif
+        text-size-adjust: 100%
     body
-        margin 0
+        margin: 0
     a
-        background transparent
+        background: transparent
     a:focus
-        outline thin dotted
+        outline: thin dotted
     a:active,
     a:hover
-        outline 0
+        outline: 0
     h1
-        font-size 2em
-        margin 0.67em 0
+        font-size: 2em
+        margin: 0.67em 0
     abbr[title]
-        border-bottom 1px dotted
+        border-bottom: 1px dotted
     b,
     strong
-        font-weight bold
+        font-weight: bold
     dfn
-        font-style italic
+        font-style: italic
     hr
-        box-sizing content-box
-        height 0
+        box-sizing: content-box
+        height: 0
     mark
-        background #ff0
-        color #000
+        background: #ff0
+        color: #000
     code,
     kbd,
     pre,
     samp
-        font-family monospace, serif
-        font-size 1em
+        font-family: monospace, serif
+        font-size: 1em
     pre
-        white-space pre-wrap
+        white-space: pre-wrap
     q
-        quotes "\201C" "\201D" "\2018" "\2019"
+        quotes: "\201C" "\201D" "\2018" "\2019"
     small
-        font-size 80%
+        font-size: 80%
     sub,
     sup
-        font-size 75%
-        line-height 0
-        position relative
-        vertical-align baseline
+        font-size: 75%
+        line-height: 0
+        position: relative
+        vertical-align: baseline
     sup
-        top -0.5em
+        top: -0.5em
     sub
-        bottom -0.25em
+        bottom: -0.25em
     img
-        border 0
+        border: 0
     svg:not(:root)
-        overflow hidden
+        overflow: hidden
     figure
-        margin 0
+        margin: 0
     fieldset
-        border 1px solid #c0c0c0
-        margin 0 2px
-        padding 0.35em 0.625em 0.75em
+        border: 1px solid #c0c0c0
+        margin: 0 2px
+        padding: 0.35em 0.625em 0.75em
     legend
-        border 0
-        padding 0
+        border: 0
+        padding: 0
     button,
     input,
     select,
     textarea
-        font-family inherit
-        font-size 100%
-        margin 0
+        font-family: inherit
+        font-size: 100%
+        margin: 0
     button,
     input
-        line-height normal
+        line-height: normal
     button,
     select
-        text-transform none
+        text-transform: none
     button,
     html input[type="button"], 
     input[type="reset"],
     input[type="submit"]
-        -webkit-appearance button
-        cursor pointer
+        -webkit-appearance: button
+        cursor: pointer
     button[disabled],
     html input[disabled]
-        cursor default
+        cursor: default
     input[type="checkbox"],
     input[type="radio"]
-        box-sizing border-box
-        padding 0
+        box-sizing: border-box
+        padding: 0
     input[type="search"]
-        -webkit-appearance textfield
-        box-sizing content-box
+        -webkit-appearance: textfield
+        box-sizing: content-box
     input[type="search"]::-webkit-search-cancel-button,
     input[type="search"]::-webkit-search-decoration
-        -webkit-appearance none
+        -webkit-appearance: none
     button::-moz-focus-inner,
     input::-moz-focus-inner
-        border 0
-        padding 0
+        border: 0
+        padding: 0
     textarea
-        overflow auto
-        vertical-align top
+        overflow: auto
+        vertical-align: top
     table
-        border-collapse collapse
-        border-spacing 0
+        border-collapse: collapse
+        border-spacing: 0
 normalize()
 
 *, *:before, *:after, *::before, *::after
     *behavior url(js/vendor/boxsizing.htc)
-    box-sizing border-box
-    margin 0
-    padding 0
+    box-sizing: border-box
+    margin: 0
+    padding: 0
 html
-    overflow-y scroll
-    overflow-x hidden
+    overflow-y: scroll
+    overflow-x: hidden
 body
     @extends $cf
-    width 100%
+    width: 100%
 img, video, audio, embed, object, input, iframe
-    max-width 100%
+    max-width: 100%
 .cf
     @extend $cf
 .browsehappy
-    width 100%
-    padding 15px 0
-    background #fff
-    border-bottom 1px solid #ddd
+    width: 100%
+    padding: 15px 0
+    background: #fff
+    border-bottom: 1px solid #ddd
     p
         center()
-        text-align center
+        text-align: center
         &:last-of-type
-            margin-bottom 0
+            margin-bottom: 0
     a
-        color blue
+        color: blue
