Make center() mixing pad = 0 by default

--- a/jeet/utilities.styl
+++ b/jeet/utilities.styl
@@ -5,7 +5,7 @@ edit()
         background: rgba(#000, 5%)
 
 // Horizontal Centering Block Elements
-center(max_width = 1410px, pad = 15px)
+center(max_width = 1410px, pad = 0)
     @extend $cf
     width: auto
     max-width: max_width
