--- a/lib/_utilities.styl
+++ b/lib/_utilities.styl
@@ -65,17 +65,17 @@ unstack()
 
 // Horizontal/Vertical/Both Alignment - Parent container needs position relative. IE9+
 align(direction = both)
-    position absolute
+    position: absolute
     if (direction == horizontal) or (direction == h)
-        left 50%
-        transform translateX(-50%)
+        left: 50%
+        transform: translateX(-50%)
     else if (direction == vertical) or (direction == v)
-        top 50%
-        transform translateY(-50%)
+        top: 50%
+        transform: translateY(-50%)
     else
-        top 50%
-        left 50%
-        transform translate(-50%, -50%)
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
 
 // Clearfix
 cf()
