internal normalize() function clashed with nib’s normalize.

--- a/lib/_reset.styl
+++ b/lib/_reset.styl
@@ -1,4 +1,4 @@
-normalize() // v2.1.3
+normalize-layout() // v2.1.3
     article,
     aside,
     details,
@@ -127,7 +127,7 @@ normalize() // v2.1.3
     table
         border-collapse: collapse
         border-spacing: 0
-normalize()
+normalize-layout()
 
 *, *:before, *:after, *::before, *::after
     *behavior: url(js/vendor/boxsizing.htc)
