--- a/lib/_utilities.styl
+++ b/lib/_utilities.styl
@@ -17,11 +17,11 @@ center(max_width = 1410px, pad = 0)
     padding-right: pad
 
 // Breakpoints
-bp(w = breakpoint, mf = mobile_first)
+bp(mt = media_type, w = breakpoint, mf = mobile_first)
     if (mf == false)
-        unquote("@media all and (max-width: " + w + ") {")
+        unquote("@media " + mt + " and (max-width: " + w + ") {")
     else
-        unquote("@media all and (min-width: " + w + ") {")
+        unquote("@media " + mt + " and (min-width: " + w + ") {")
 endbp()
     unquote("}")
 
