Alias in correct places
Global Stylus packages seem to compile async. By putting the aliases close to (in the same file) the mixin they're aliasing, we ensure they'll work. This change was made because the col alias wasn't working whereas the g alias was.

--- a/jeet/_grid.styl
+++ b/jeet/_grid.styl
@@ -34,6 +34,8 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0)
     &:last-child
       margin-{opposite-position(side)}: (margin_last)%
 
+col = column
+
 // Columns without Gutters
 span(ratio = 1, offset = 0)
   side = -get_layout_direction()
