Namespace global vars

--- a/jeet/_settings.styl
+++ b/jeet/_settings.styl
@@ -27,8 +27,8 @@ primary_ratio = perfect_fifth
 secondary_ratio = major_seventh
 
 // Grid Settings
-gutter = 3
-parent_first = false
-layout_direction = LTR
+jeet-gutter = 3
+jeet-parent-first = false
+jeet-layout-direction = LTR
 
-g = gutter
+g = jeet-gutter
