--- a/jeet/_utilities.styl
+++ b/jeet/_utilities.styl
@@ -49,7 +49,7 @@ unstack()
     margin-{side}: 0
   &:last-child
     margin-{opposite-position(side)}: 0
-  if (layout_direction == RTL)
+  if (jeet-layout-direction == RTL)
     text-align: right
   else
     text-align: left
