--- a/jeet/_functions.styl
+++ b/jeet/_functions.styl
@@ -1,15 +1,18 @@
 -get_span(ratio = 1)
   return ratio * 100
--get_column(ratios = 1, g = gutter)
-  ratios = -reverse(ratios) unless parent_first is true
+
+-get_column(ratios = 1, g = jeet-gutter)
+  ratios = -reverse(ratios) unless jeet-parent-first is true
   w = 100
   for ratio in ratios
     g = g / w * 100
     w = 100 * ratio - g + ratio * g
   return w g
+
 -get_layout_direction()
-  layout_direction == RTL ? result = right : result = left
+  jeet-layout-direction == RTL ? result = right : result = left
   return result
+
 -replace_nth(list, index, value)
   result = ()
   index = length(list) + index if index < 0
@@ -19,6 +22,7 @@
     else
       append(result, list[i])
   return result
+
 -reverse(list)
   result = ()
   for item in list
