Disable automatic text alignment on stack()
Sorry for the headaches, Tom.

--- a/jeet/index.styl
+++ b/jeet/index.styl
@@ -2,7 +2,7 @@
   --------------------------
   edit()
   center(max_width = 1410px, pad = 0)
-  stack(pad = 0, align = center)
+  stack(pad = 0, align = false)
   unstack()
   align(direction = both)
   cf()
