Make settings configurable

--- a/jeet/_settings.styl
+++ b/jeet/_settings.styl
@@ -1,6 +1,6 @@
 // Grid Settings
-jeet-gutter = 3
-jeet-parent-first = false
-jeet-layout-direction = LTR
+jeet-gutter ?= 3
+jeet-parent-first ?= false
+jeet-layout-direction ?= LTR
 
 g = jeet-gutter
